examples/c/error-codes/undefined/UB-FD6-bad-static.output
UB-FD6-bad-static.c:4:5: error: first parameter of 'main' (argument count) must be of type 'int'
int main(float x, char** y){
    ^
1 error generated.
